[FIX] account_reports: dark mode backgrounds
Change the color of some elements to better adapt the dark mode.

closes odoo/enterprise#44812

X-original-commit: 3b4a46a347ba110b83c52fd1041ed8660b58d636

--- a/account_reports/static/src/components/account_report/account_report.scss
+++ b/account_reports/static/src/components/account_report/account_report.scss
@@ -21,7 +21,7 @@
     // Table
     //------------------------------------------------------------------------------------------------------------------
     .table {
-        background-color: $o-white;
+        background-color: $o-view-background-color;
         border-collapse: separate; //!\\ Allows to add padding to the table
         border-spacing: 0; //!\\ Removes default spacing between cells due to 'border-collapse: separate'
         font-size: 0.8rem;
@@ -95,7 +95,7 @@
     }
 
     thead.sticky {
-        background-color: $o-white;
+        background-color: $o-view-background-color;
         position: sticky;
         top: 0;
         z-index: 999;
@@ -183,7 +183,7 @@
     }
     .btn_action {
         opacity: 0;
-        background-color: $o-white;
+        background-color: $o-view-background-color;
         color: $o-gray-600;
         width: auto;
         padding: 0 0.25rem;
